--- a/FootBook/UnlockApp+.conf
+++ b/FootBook/UnlockApp+.conf
@@ -1,6 +1,6 @@
 // emm
 
-hostname = api4.bybutter.com, commerce-i18n-api.faceu.mobi,commerce-api.faceu.mobi, pay.wecut.com,revenuecat.lakecoloring.com,license.pdfexpert.com, appraven.net, user.ftmailbox.cn, api.lightricks.com, api-sub.meitu.com, gw.aoscdn.com, m2u-api.getkwai.com, bookapi.ellabook.cn,api.risingfalling.com,screen-lock.51wnl-cq.com,pro-status-service-prod.azurewebsites.net, gateway.ergedd.com, mid.zineapi.com, bmall.camera360.com, api1.pauseable.com, app.api.versa-ai.com, cutisanapi.imuuzi.com, server.yoyiapp.com, api.feidee.net, userapi.feidee.net, tg.feidee.com, community.feidee.com, qianji.xxoojoke.com, xunji.implements.io, zy6kcqa01a.execute-api.us-east-2.amazonaws.com, user-kaji-api.b612kaji.com, musicpay.kuwo.cn, i.xinyulib.com.cn, apiw.9waquan.com, server.yoyiapp.com, 123.57.195.48, *.youshu.cc, www.40sishi.com, gw.aoscdn.com, bt.flashdown365.com, raw.githubusercontent.com, *.wtzw.com, apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157, api.meiease.cn, apiios_dq.xiangha.com, appweb_dq.xiangha.com, apiios.xiangha.com, api.infzm.com, *.feidee.net,api.ruguoapp.com, api.shouzhang.com, integral.dasyibalang.com, poster.meipian.cn, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, tagit.hyhuo.com, micro-tool-api.lyaway.com, lapi.photomath.net, api.neuralprisma.com, api.m.jd.com, api.woaoo.net, lchttpapi.xczim.com, web.vizmato.com, purchases.ws.pho.to, vip1.kuwo.cn, dayone.me,dayone.app, vstou.faxingwu.com, everest.castbox.fm, api.gotokeep.com, apivip.zybang.com, mall.zuoyebang.com, pay.wecut.com, *.nebo.app, *.adobe.*,ipadcms.caixin.com, api.yikaobang.com.cn,  www.babybooks.top, zebra.maka.im, xrckeji.com, xianbeikeji.com, xrckeji.com, quanzi.jizhangapp.com, 106.54.2.168, api.xiuxiu.meitu.com, api.meiyan.com, panel.getdailyart.com, biz.caiyunapp.com, www.40sishi.com, outcut.szsszykj.com, picturebook.ipalfish.com, api2.fitplanapp.com, api.shayujizhang.com, r.51wnl-cq.com, api.dushu.io, getway.radio.cn, api.reface.video, www.helloshiyu.com, avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.com, api.flexibits.com, 115.28.168.103, dbapi.ganbuguo.com,  api.pushover.net, subs.platforms.team, api.hulusaas.com, *.snailsleep.net, nmeditation.snailsleep.net, claritywallpaper.com, subscription-service.neuralprisma.com, diary.7english.cn
+hostname = api4.bybutter.com, commerce-i18n-api.faceu.mobi,commerce-api.faceu.mobi, pay.wecut.com,revenuecat.lakecoloring.com,license.pdfexpert.com, user.ftmailbox.cn, api.lightricks.com, api-sub.meitu.com, gw.aoscdn.com, m2u-api.getkwai.com, bookapi.ellabook.cn,api.risingfalling.com,screen-lock.51wnl-cq.com,pro-status-service-prod.azurewebsites.net, gateway.ergedd.com, bmall.camera360.com, api1.pauseable.com, app.api.versa-ai.com, cutisanapi.imuuzi.com, server.yoyiapp.com, api.feidee.net, userapi.feidee.net, tg.feidee.com, community.feidee.com, qianji.xxoojoke.com, xunji.implements.io, zy6kcqa01a.execute-api.us-east-2.amazonaws.com, user-kaji-api.b612kaji.com, musicpay.kuwo.cn, i.xinyulib.com.cn, apiw.9waquan.com, server.yoyiapp.com, 123.57.195.48, *.youshu.cc, www.40sishi.com, gw.aoscdn.com, bt.flashdown365.com, raw.githubusercontent.com, *.wtzw.com, apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157, api.meiease.cn, apiios_dq.xiangha.com, appweb_dq.xiangha.com, apiios.xiangha.com, api.infzm.com, *.feidee.net,api.ruguoapp.com, api.shouzhang.com, integral.dasyibalang.com, poster.meipian.cn, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, tagit.hyhuo.com, micro-tool-api.lyaway.com, lapi.photomath.net, api.neuralprisma.com, api.m.jd.com, api.woaoo.net, lchttpapi.xczim.com, web.vizmato.com, purchases.ws.pho.to, vip1.kuwo.cn, dayone.me,dayone.app, vstou.faxingwu.com, everest.castbox.fm, api.gotokeep.com, apivip.zybang.com, mall.zuoyebang.com, pay.wecut.com, *.nebo.app, *.adobe.*,ipadcms.caixin.com, api.yikaobang.com.cn,  www.babybooks.top, zebra.maka.im, xrckeji.com, xianbeikeji.com, xrckeji.com, quanzi.jizhangapp.com, 106.54.2.168, api.xiuxiu.meitu.com, api.meiyan.com, panel.getdailyart.com, biz.caiyunapp.com, www.40sishi.com, outcut.szsszykj.com, picturebook.ipalfish.com, api2.fitplanapp.com, api.shayujizhang.com, r.51wnl-cq.com, api.dushu.io, getway.radio.cn, api.reface.video, www.helloshiyu.com, avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.com, api.flexibits.com, 115.28.168.103, dbapi.ganbuguo.com,  api.pushover.net, subs.platforms.team, api.hulusaas.com, *.snailsleep.net, nmeditation.snailsleep.net, claritywallpaper.com, subscription-service.neuralprisma.com, diary.7english.cn
 
 // 以下为复刻部分 
 
@@ -36,9 +36,6 @@ https?:\/\/revenuecat\.lakecoloring\.com\/v\d\/(receipts|subscribers) url script
 
 #-----------------2022-03-22汇总更新--------------
 
-# > 089 appraven美化（2022-03-23）emm 仅美化，没有vip功能
-^https?:\/\/appraven\.net\/AppRaven\/(app|social|buy) url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/appraven.js
-
 # > 088 Symbolab 解锁订阅（2022-03-22）(需登录) 好像没有hostname
 ^https?:\/\/scibug\.com\/appleSubscriptionValidate$ url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/symbolab.js
 
@@ -57,7 +54,7 @@ https?:\/\/api\.lightricks\.com\/subscription\?bundle=com\.lightricks\.Enlight-V
 https?:\/\/api-sub\.meitu\.com\/v\d\/user\/vip_info\.json url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/wink.js
 
 # > 083 一甜相機解鎖會員權限（2022-02-27）emm +
-^https?:\/\/m2u-api\.getkwai\.com\/api-server\/api\/v2\/vip\/vipUserInfo url script-response-body https://raw.githubusercontent.com/hhx2018/HHXSELFUSE999/main/Footbook/onesweetcamera.js
+^https?:\/\/m2u-api\.getkwai\.com\/api-server\/api\/v2\/vip\/vipUserInfo url script-response-body https://raw.githubusercontent.com/hhx2018/HHXSELFUSE998/main/FootBook/onesweetcamera.js
 
 # > 082 傲軟摳圖解鎖會員權限（2022-02-25）emm +
 https?:\/\/gw\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/apowersoft.js
@@ -84,8 +81,6 @@ https://pro-status-service-prod.azurewebsites.net/api/item url script-response-b
 # > 075 儿歌点点(20220208) emm
 http:\/\/gateway\.ergedd\.com\/dduser\/user\/center\/set url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/egdd.js
 
-# > 074 🔴 varlens(20220202) emm
-^https?:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/varlens.js
 
 # > 073 Mix（20220201）emm
 ^https:\/\/bmall\.camera360\.com\/api\/(iap\/check-receipt$|mix\/getinfo$) url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/mix.js
