--- a/FootBook/UnlockApp+.conf
+++ b/FootBook/UnlockApp+.conf
@@ -1,6 +1,6 @@
 // emm
 
-hostname = api4.bybutter.com, commerce-i18n-api.faceu.mobi,commerce-api.faceu.mobi, pay.wecut.com,revenuecat.lakecoloring.com,license.pdfexpert.com, user.ftmailbox.cn, api.lightricks.com, api-sub.meitu.com, gw.aoscdn.com, m2u-api.getkwai.com, bookapi.ellabook.cn,api.risingfalling.com,screen-lock.51wnl-cq.com,pro-status-service-prod.azurewebsites.net, gateway.ergedd.com, bmall.camera360.com, api1.pauseable.com, app.api.versa-ai.com, cutisanapi.imuuzi.com, server.yoyiapp.com, api.feidee.net, userapi.feidee.net, tg.feidee.com, community.feidee.com, qianji.xxoojoke.com, xunji.implements.io, zy6kcqa01a.execute-api.us-east-2.amazonaws.com, user-kaji-api.b612kaji.com, musicpay.kuwo.cn, i.xinyulib.com.cn, apiw.9waquan.com, server.yoyiapp.com, 123.57.195.48, *.youshu.cc, www.40sishi.com, gw.aoscdn.com, bt.flashdown365.com, raw.githubusercontent.com, *.wtzw.com, apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157, api.meiease.cn, apiios_dq.xiangha.com, appweb_dq.xiangha.com, apiios.xiangha.com, api.infzm.com, *.feidee.net,api.ruguoapp.com, api.shouzhang.com, integral.dasyibalang.com, poster.meipian.cn, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, tagit.hyhuo.com, micro-tool-api.lyaway.com, lapi.photomath.net, api.neuralprisma.com, api.m.jd.com, api.woaoo.net, lchttpapi.xczim.com, web.vizmato.com, purchases.ws.pho.to, vip1.kuwo.cn, dayone.me,dayone.app, vstou.faxingwu.com, everest.castbox.fm, api.gotokeep.com, apivip.zybang.com, mall.zuoyebang.com, pay.wecut.com, *.nebo.app, *.adobe.*,ipadcms.caixin.com, api.yikaobang.com.cn,  www.babybooks.top, zebra.maka.im, xrckeji.com, xianbeikeji.com, xrckeji.com, quanzi.jizhangapp.com, 106.54.2.168, api.xiuxiu.meitu.com, api.meiyan.com, panel.getdailyart.com, biz.caiyunapp.com, www.40sishi.com, outcut.szsszykj.com, picturebook.ipalfish.com, api2.fitplanapp.com, api.shayujizhang.com, r.51wnl-cq.com, api.dushu.io, getway.radio.cn, api.reface.video, www.helloshiyu.com, avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.com, api.flexibits.com, 115.28.168.103, dbapi.ganbuguo.com,  api.pushover.net, subs.platforms.team, api.hulusaas.com, *.snailsleep.net, nmeditation.snailsleep.net, claritywallpaper.com, subscription-service.neuralprisma.com, diary.7english.cn
+hostname = api4.bybutter.com, commerce-i18n-api.faceu.mobi,commerce-api.faceu.mobi, pay.wecut.com,revenuecat.lakecoloring.com,license.pdfexpert.com, user.ftmailbox.cn, api.lightricks.com, api-sub.meitu.com, gw.aoscdn.com, m2u-api.getkwai.com, bookapi.ellabook.cn,api.risingfalling.com,screen-lock.51wnl-cq.com, gateway.ergedd.com, bmall.camera360.com, api1.pauseable.com, app.api.versa-ai.com, cutisanapi.imuuzi.com, server.yoyiapp.com, api.feidee.net, userapi.feidee.net, tg.feidee.com, community.feidee.com, qianji.xxoojoke.com, xunji.implements.io, zy6kcqa01a.execute-api.us-east-2.amazonaws.com, user-kaji-api.b612kaji.com, musicpay.kuwo.cn, i.xinyulib.com.cn, apiw.9waquan.com, server.yoyiapp.com, 123.57.195.48, *.youshu.cc, www.40sishi.com, gw.aoscdn.com, bt.flashdown365.com, raw.githubusercontent.com, *.wtzw.com, apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157, api.meiease.cn, apiios_dq.xiangha.com, appweb_dq.xiangha.com, apiios.xiangha.com, api.infzm.com, *.feidee.net,api.ruguoapp.com, api.shouzhang.com, integral.dasyibalang.com, poster.meipian.cn, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, tagit.hyhuo.com, micro-tool-api.lyaway.com, lapi.photomath.net, api.neuralprisma.com, api.m.jd.com, api.woaoo.net, lchttpapi.xczim.com, web.vizmato.com, purchases.ws.pho.to, vip1.kuwo.cn, dayone.me,dayone.app, vstou.faxingwu.com, everest.castbox.fm, api.gotokeep.com, apivip.zybang.com, mall.zuoyebang.com, pay.wecut.com, *.nebo.app, *.adobe.*,ipadcms.caixin.com, api.yikaobang.com.cn,  www.babybooks.top, zebra.maka.im, xrckeji.com, xianbeikeji.com, xrckeji.com, quanzi.jizhangapp.com, 106.54.2.168, api.xiuxiu.meitu.com, api.meiyan.com, panel.getdailyart.com, biz.caiyunapp.com, www.40sishi.com, outcut.szsszykj.com, picturebook.ipalfish.com, api2.fitplanapp.com, api.shayujizhang.com, r.51wnl-cq.com, api.dushu.io, getway.radio.cn, api.reface.video, www.helloshiyu.com, avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.com, api.flexibits.com, 115.28.168.103, dbapi.ganbuguo.com,  api.pushover.net, subs.platforms.team, api.hulusaas.com, *.snailsleep.net, nmeditation.snailsleep.net, claritywallpaper.com, subscription-service.neuralprisma.com, diary.7english.cn
 
 // 以下为复刻部分 
 
@@ -19,11 +19,6 @@ https://(commerce-.*api|pay).(faceu|wecut).(com|mobi)/(commerce|apple)/(iosAppVe
 https?:\/\/revenuecat\.lakecoloring\.com\/v\d\/(receipts|subscribers) url script-echo-response https://raw.githubusercontent.com/hhx2018/doi/main/lakepro.js
 
 #-----------------2022-03-26汇总更新--------------
-
-# 🔴 PdfExpert Pro 解锁会员权限（2022-03-26）emm：无需登录，会员恢复成功后，建议关闭PdfExpert应用的联网权限
-# ^https?:\/\/license\.pdfexpert\.com\/api\/\d\.\d\/\w{9}\d\/\w{12}\/(state$|refresh$|check$) url script-request-body  https://raw.githubusercontent.com/hhx2018/doi/main/pdfexpert.js
-# ^https?:\/\/license\.pdfexpert\.com\/api\/\d\.\d\/\w{9}\d\/\w{12}\/(state$|refresh$|check$) url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/pdfexpert1.js
-
 
 # Document Pro 解锁会员编辑功能 一次性解锁（2022-7-13更新）
 # > 002 Document Pro 解锁会员编辑功能（2022-05-11）emm
@@ -75,9 +70,6 @@ https?:\/\/api\.magictouch\.design\/user\/user\/getUserByDevice url script-respo
 # > 077 咿啦看書解鎖會員權限（2022-02-17）emm
 https?:\/\/bookapi\.ellabook\.cn\/rest\/api\/service$ url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/elabook.js
 
-# > 076 RNI解锁高级会员（20220215）emm
-https://pro-status-service-prod.azurewebsites.net/api/item url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/rf.js
-
 # > 075 儿歌点点(20220208) emm
 http:\/\/gateway\.ergedd\.com\/dduser\/user\/center\/set url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/egdd.js
 
@@ -120,9 +112,6 @@ https://api.neuralprisma.com/receipt/ios/status/prisma/* url script-response-bod
 
 # > 061 京东取消店铺会员（20210516） emm
 https://api\.m\.jd\.com\/client\.action\?appid=jd_shop_member&functionId=getShopMemberCardDetail&.+ url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/unbind.js
-
-# > 060 我奥篮球 （20210515） by photonmang
-http://api.woaoo.net/.+ url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/walq.js
 
 # > 059 西窗烛 （20210514） emm
 https://lchttpapi.xczim.com/* url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/xcz.js
@@ -167,10 +156,6 @@ http://ipadcms.caixin.com/tmp/articles/* url script-response-body https://raw.gi
 # > 045 医考帮（20210313） emm
 https://api.yikaobang.com.cn/* url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/ykb.js
 
-
-# > 043 儿童睡前故事 （20210131） emm
-https://www.babybooks.top/v0/profile url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/etsqgs.js
-
 # > 042 斑马海报 （20210130） emm
 https://zebra.maka.im/api/user/info url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/bmhb.js
 
@@ -199,9 +184,6 @@ https://api.meiyan.com/iap/verify.json url script-response-body https://raw.gith
 
 # > 032 每日艺术 （20201123） emm
 https://panel.getdailyart.com/APIMobile/users/single url response-body account_type":"0 response-body account_type":"2
-
-# > 031 彩云天气 （20201121） emm
-https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/caiyun.js
 
 # > 030 豌豆清单 (20201112) emm
 ^https:\/\/www\.40sishi\.com\/list\/user\/profile$ url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/wdqd.js
