--- a/FootBook/UnlockApp+.conf
+++ b/FootBook/UnlockApp+.conf
@@ -255,9 +255,8 @@ https://www.mindmeister.com/api/v2/licenses/meistertask url script-response-body
 # > 004 大象冥想 （20200904） emm
 ^https?:\/\/nmeditation\.snailsleep\.net\/meditation-(audio|user|order|audio)\/(api|user)\/(audio\/master\/detail|get\/info|order/user\/vip\/info|ad\/get) url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/dxmx.js
 
-# > 003 克拉壁纸 （20200903） emm
-^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/clarity.js
-
+# > 003 克拉壁纸 （20221210） emm
+^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll|picture\/search|catalog\/listAll|top\/list|picture\/date\?date) url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/clarity.js
 # > 002 lensa （20200902） emm
 ^https?:\/\/subscription-service\.neuralprisma\.com\/subscription_get url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/lensa.js
 
