--- a/FootBook/UnlockApp+.conf
+++ b/FootBook/UnlockApp+.conf
@@ -1,6 +1,6 @@
 // emm
 
-hostname = *.caiyunapp.*, *cyapi*, api4.bybutter.com, commerce-i18n-api.faceu.mobi,commerce-api.faceu.mobi, pay.wecut.com,revenuecat.lakecoloring.com,license.pdfexpert.com, user.ftmailbox.cn, api.lightricks.com, api-sub.meitu.com, gw.aoscdn.com, m2u-api.getkwai.com, bookapi.ellabook.cn,api.risingfalling.com,screen-lock.51wnl-cq.com, gateway.ergedd.com, bmall.camera360.com, api1.pauseable.com, app.api.versa-ai.com, cutisanapi.imuuzi.com, server.yoyiapp.com, api.feidee.net, userapi.feidee.net, tg.feidee.com, community.feidee.com, qianji.xxoojoke.com, xunji.implements.io, zy6kcqa01a.execute-api.us-east-2.amazonaws.com, user-kaji-api.b612kaji.com, musicpay.kuwo.cn, i.xinyulib.com.cn, apiw.9waquan.com, server.yoyiapp.com, 123.57.195.48, *.youshu.cc, www.40sishi.com, gw.aoscdn.com, bt.flashdown365.com, raw.githubusercontent.com, *.wtzw.com, apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157, api.meiease.cn, apiios_dq.xiangha.com, appweb_dq.xiangha.com, apiios.xiangha.com, api.infzm.com, *.feidee.net,api.ruguoapp.com, api.shouzhang.com, integral.dasyibalang.com, poster.meipian.cn, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, tagit.hyhuo.com, micro-tool-api.lyaway.com, lapi.photomath.net, api.neuralprisma.com, api.m.jd.com, api.woaoo.net, lchttpapi.xczim.com, web.vizmato.com, purchases.ws.pho.to, vip1.kuwo.cn, dayone.me,dayone.app, vstou.faxingwu.com, everest.castbox.fm, api.gotokeep.com, apivip.zybang.com, mall.zuoyebang.com, pay.wecut.com, *.nebo.app, *.adobe.*,api.yikaobang.com.cn,  www.babybooks.top, zebra.maka.im, xrckeji.com, xianbeikeji.com, xrckeji.com, quanzi.jizhangapp.com, 106.54.2.168, api.xiuxiu.meitu.com, api.meiyan.com, panel.getdailyart.com, biz.caiyunapp.com, www.40sishi.com, outcut.szsszykj.com, picturebook.ipalfish.com, api2.fitplanapp.com, api.shayujizhang.com, r.51wnl-cq.com, api.dushu.io, getway.radio.cn, api.reface.video, www.helloshiyu.com, avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.com, api.flexibits.com, 115.28.168.103, dbapi.ganbuguo.com,  api.pushover.net, subs.platforms.team, api.hulusaas.com, *.snailsleep.net, nmeditation.snailsleep.net, claritywallpaper.com, subscription-service.neuralprisma.com, diary.7english.cn
+hostname = *.caiyunapp.*, *cyapi*, api4.bybutter.com, commerce-i18n-api.faceu.mobi,commerce-api.faceu.mobi, pay.wecut.com,revenuecat.lakecoloring.com,license.pdfexpert.com, user.ftmailbox.cn, api-sub.meitu.com, gw.aoscdn.com, m2u-api.getkwai.com, bookapi.ellabook.cn,api.risingfalling.com,screen-lock.51wnl-cq.com, gateway.ergedd.com, bmall.camera360.com, api1.pauseable.com, app.api.versa-ai.com, cutisanapi.imuuzi.com, server.yoyiapp.com, api.feidee.net, userapi.feidee.net, tg.feidee.com, community.feidee.com, xunji.implements.io, zy6kcqa01a.execute-api.us-east-2.amazonaws.com, user-kaji-api.b612kaji.com, musicpay.kuwo.cn, i.xinyulib.com.cn, apiw.9waquan.com, server.yoyiapp.com, 123.57.195.48, *.youshu.cc, www.40sishi.com, gw.aoscdn.com, bt.flashdown365.com, raw.githubusercontent.com, *.wtzw.com, apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157, api.meiease.cn, apiios_dq.xiangha.com, appweb_dq.xiangha.com, apiios.xiangha.com, api.infzm.com, *.feidee.net,api.ruguoapp.com, api.shouzhang.com, integral.dasyibalang.com, poster.meipian.cn, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, tagit.hyhuo.com, micro-tool-api.lyaway.com, lapi.photomath.net, api.neuralprisma.com, api.m.jd.com, api.woaoo.net, lchttpapi.xczim.com, web.vizmato.com, purchases.ws.pho.to, vip1.kuwo.cn, dayone.me,dayone.app, vstou.faxingwu.com, everest.castbox.fm, api.gotokeep.com, apivip.zybang.com, mall.zuoyebang.com, pay.wecut.com, *.nebo.app, *.adobe.*,api.yikaobang.com.cn,  www.babybooks.top, zebra.maka.im, xrckeji.com, xianbeikeji.com, xrckeji.com, quanzi.jizhangapp.com, 106.54.2.168, api.xiuxiu.meitu.com, api.meiyan.com, panel.getdailyart.com, biz.caiyunapp.com, www.40sishi.com, outcut.szsszykj.com, picturebook.ipalfish.com, api2.fitplanapp.com, api.shayujizhang.com, r.51wnl-cq.com, api.dushu.io, getway.radio.cn, api.reface.video, www.helloshiyu.com, avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.com, api.flexibits.com, 115.28.168.103, dbapi.ganbuguo.com,  api.pushover.net, subs.platforms.team, api.hulusaas.com, *.snailsleep.net, nmeditation.snailsleep.net, claritywallpaper.com, subscription-service.neuralprisma.com, diary.7english.cn
 
 // 以下为复刻部分 
 
@@ -48,10 +48,6 @@ https?:\/\/revenuecat\.lakecoloring\.com\/v\d\/(receipts|subscribers) url script
 # > 087 FT中文網解鎖會員權限（2022-03-06）emm +
 ^https?:\/\/user\.ftmailbox\.cn\/ios-receipt-validation\.php.* url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/ftchinese.js
 
-#-----------------2022-03-06汇总更新--------------
-# 🔴 Veidoleap 解鎖高級會員 +
-https?:\/\/api\.lightricks\.com\/subscription\?bundle=com\.lightricks\.Enlight-Video url script-echo-response https://raw.githubusercontent.com/hhx2018/doi/main/videoleap.js
-
 # > 085 Wallcraft解鎖會員權限（2022-03-04）emm 簡單測試后發現無效
 # ^https?:\/\/billing-ios\.wallpaperscraft\.com\/verify_receipt\/remove_ads$ url response-body active":false response-body active":true
 
@@ -93,8 +89,6 @@ https://cutisanapi.imuuzi.com/api/Home/index url script-response-body https://ra
 # > 071 fimo（20220128）emm
 ^https://server.yoyiapp.com/fimo-user/user$ url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/fimo.js
 
-# > 070 🔴 钱迹（20220125）emm
-https?://qianji.xxoojoke.com/(vip/configios|budget/submit) url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/qj.js
 
 # > 069 训记 (20220125) emm
 https://xunji.implements.io/whole_user_info url response-body vipDay":0 response-body vipDay":360
@@ -210,9 +204,6 @@ https://api.shayujizhang.com/account/detail/info/ url script-response-body https
 # > 024 万年历（20201028） emm
 https://r.51wnl-cq.com/Api/User/GetExtInfo url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/wnl.js
 
-# > 023 🔴 樊登读书 （20201026） emm
-; https://api.dushu.io/Album/Info url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/fdds.js
-
 # > 022 云听 （20201020） emm
 http://getway.radio.cn/app* url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/yt.js
 
@@ -255,8 +246,6 @@ https://www.mindmeister.com/api/v2/licenses/meistertask url script-response-body
 # > 008 Productive （20200905） emm
 ^https:\/\/subs\.platforms\.team\/.+\/apple\/verify$ url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/productive.js
 
-# > 007🔴 葫芦时刻 （20200905） emm
-; ^https:\/\/api\.hulusaas\.com\/api\/* url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/hulu.js
 
 # > 006 蜗牛睡眠 （20200906） emm
 ^https:\/\/(snailsleep\.net\/|(music|community)\.snailsleep\.net\/)(snail\/v1\/profile\/get|snail-music\/music\/(sleeping|meditation)\/single\/list) url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/wnsm.js
@@ -272,8 +261,3 @@ https://www.mindmeister.com/api/v2/licenses/meistertask url script-response-body
 
 # > 001 moo （20200831)） emm
 https://diary.7english.cn:2433//api/user/userInfo url script-response-body https://raw.githubusercontent.com/hhx2018/doi/main/moo.js
-
-https://raw.githubusercontent.com/hhx2018/doi/main/612.js
-
-https://raw.githubusercontent.com/hhx2018/doi/main/
-https://raw.githubusercontent.com/hhx2018/doi/main/
