--- a/FootBook/toorightge.conf
+++ b/FootBook/toorightge.conf
@@ -1,21 +1,24 @@
-// 此config聞見整理自各位大佬公開信息，其原因是由於部分軟件在後期早飯的時候是單一未見，導致重寫列表過長觀感不好，所以做此整理
+// 整理
 // 2nd Author hhx2018
-// 開頭先在此膜拜各位大佬
 // @UpdateTime        2022-04-25
 
-// ==UserScript== 原作者信息
-// @ScriptName        Quan Crack 腳本
-// @Author            1st Author Cuttlefish & Yiqingchen
-// @ScriptTime        若腳本失效可抓取對應時間的舊版本應用
-// @Icon              ✅ 🔓 🚫 ❌
-// @CollectApp        https://docs.qq.com/sheet/DYmRTQXpVY0hNcGls?tab=BB08J2
-// @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/UnlockApp.conf
-// ==/UserScript==
 
 // ----------------------------------------------------
 
 // 在下方填寫用於解密的host地址，用英文逗號分隔
-hostname = pro-status-service-prod.azurewebsites.net, appwk.baidu.com, www.duitang.com, .wallpaperscraft.com, buy.itunes.apple.com,*.gotokeep.com,api.account.meitu.com,vira.llsapp.com,api.meiyan.com,nomo.dafork.com,api.xiuxiu.meitu.com,h5.xiuxiu.meitu.com,api.infzm.com,apiios_dq.xiangha.com,appweb_dq.xiangha.com,101.200.225.157,apiios.xiangha.com,39.97.157.167,server.yoyiapp.com,api.meiease.cn,app.api.versa-ai.com,*.kuwo.cn,*.youshu.cc
+hostname = 
+pro-status-service-prod.azurewebsites.net, 
+appwk.baidu.com, 
+www.duitang.com, 
+.wallpaperscraft.com, 
+buy.itunes.apple.com,
+*.gotokeep.com,
+api.account.meitu.com,
+vira.llsapp.com,
+api.meiyan.com,
+nomo.dafork.com,
+api.xiuxiu.meitu.com,
+h5.xiuxiu.meitu.com,api.infzm.com,apiios_dq.xiangha.com,appweb_dq.xiangha.com,101.200.225.157,apiios.xiangha.com,39.97.157.167,server.yoyiapp.com,api.meiease.cn,app.api.versa-ai.com,*.kuwo.cn,*.youshu.cc
 
 
 # 在下方填寫重寫正則表達式和重寫類型以及對應的js文件地址
