--- a/FootBook/toorightge.conf
+++ b/FootBook/toorightge.conf
@@ -7,18 +7,7 @@
 
 // 在下方填寫用於解密的host地址，用英文逗號分隔
 hostname = 
-pro-status-service-prod.azurewebsites.net, 
-appwk.baidu.com, 
-www.duitang.com, 
-.wallpaperscraft.com, 
-buy.itunes.apple.com,
-*.gotokeep.com,
-api.account.meitu.com,
-vira.llsapp.com,
-api.meiyan.com,
-nomo.dafork.com,
-api.xiuxiu.meitu.com,
-h5.xiuxiu.meitu.com,api.infzm.com,apiios_dq.xiangha.com,appweb_dq.xiangha.com,101.200.225.157,apiios.xiangha.com,39.97.157.167,server.yoyiapp.com,api.meiease.cn,app.api.versa-ai.com,*.kuwo.cn,*.youshu.cc
+pro-status-service-prod.azurewebsites.net, appwk.baidu.com, www.duitang.com, .wallpaperscraft.com, buy.itunes.apple.com,*.gotokeep.com,api.account.meitu.com,vira.llsapp.com,api.meiyan.com,nomo.dafork.com,api.xiuxiu.meitu.com,h5.xiuxiu.meitu.com,api.infzm.com,apiios_dq.xiangha.com,appweb_dq.xiangha.com,101.200.225.157,apiios.xiangha.com,39.97.157.167,server.yoyiapp.com,api.meiease.cn,app.api.versa-ai.com,*.kuwo.cn,*.youshu.cc
 
 
 # 在下方填寫重寫正則表達式和重寫類型以及對應的js文件地址
