--- a/FootBook/toorightge.conf
+++ b/FootBook/toorightge.conf
@@ -1,115 +1,84 @@
-// 整理
-// 2nd Author hhx2018
-// @UpdateTime        2022-04-25
+// @UpdateTime  
 
 
-// ----------------------------------------------------
+// ---------------------------------------------------------------------
 
-// 在下方填寫用於解密的host地址，用英文逗號分隔
 hostname = pro-status-service-prod.azurewebsites.net, appwk.baidu.com, www.duitang.com, .wallpaperscraft.com, buy.itunes.apple.com,*.gotokeep.com,api.account.meitu.com,vira.llsapp.com,api.meiyan.com,nomo.dafork.com,api.xiuxiu.meitu.com,h5.xiuxiu.meitu.com,api.infzm.com,apiios_dq.xiangha.com,appweb_dq.xiangha.com,101.200.225.157,apiios.xiangha.com,39.97.157.167,server.yoyiapp.com,api.meiease.cn,app.api.versa-ai.com,*.kuwo.cn,*.youshu.cc
 
 
-# 在下方填寫重寫正則表達式和重寫類型以及對應的js文件地址
-# 實例格式
-#  RNI解锁高级会员（20220215）by ddgksf2013
-# https://pro-status-service-prod.azurewebsites.net/api/item url script-response-body https://raw.githubusercontent.com/hhx2018/HHXSELFUSE998/main/FootBook/RNIFilm.js
+// -------------------------------------------------------------------
 
-# 百度文库解锁会员阅读权限
+
+
+// 百度文库解锁会员阅读权限
 ^https:\/\/appwk\.baidu\.com\/naapi\/user\/getinfo url script-response-body https://raw.githubusercontent.com/hhx2018/HHXSELFUSE998/main/FootBook/baiduwenku.js
 
-
-# CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
-
-
-
-# DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD
-# 傲軟摳圖 解鎖
+// 傲軟摳圖 解鎖
 ^https?:\/\/gw\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/BackgroundEraserProCrack.js
 
-# EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
-# 解鎖KEEP會員視頻 V 7.17.0有效
+// 解鎖KEEP會員視頻 V 7.17.0有效
 ^https://(.+).gotokeep.com(/athena/v5/people/my|/nuocha/plans) url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/keep
 
-# FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-# 美顏相機解鎖紫鑽石會員 20220115 V10.3.0 如果圖片加載不出來，關掉廣告規則
+// 美顏相機解鎖紫鑽石會員 20220115 V10.3.0 如果圖片加載不出來，關掉廣告規則
 ^https?:\/\/api\.account\.meitu\.com\/(common\/check_device_login_pwd|users\/show_current\.json) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiYanXiangJi.js
 ^https?:\/\/api\.meiyan\.com\/vip\/(user_center\.json|user_info\.json) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiYanXiangJi.js
 
-# GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG
-# 流利說閱讀 id1435478035 解鎖會員 20220116
+// 流利說閱讀 id1435478035 解鎖會員 20220116
 ^https?:\/\/vira\.llsapp\.com\/api\/v\d\/\w+\/\w+$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/LiuLiShuo-YueDu.js
 
-# HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
-# NOMOCAM & NOMORAW 解鎖訂閱 1.5.131
+// NOMOCAM & NOMORAW 解鎖訂閱 1.5.131
 ^https?:\/\/nomo\.dafork\.com\/api\/v3\/register\/phone_signin$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NoMoCamProCrack.js
 
-# IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
-# 美圖秀秀高級會員 20220117 無需登錄
+// 美圖秀秀高級會員 20220117 無需登錄
 ^https?:\/\/(h5|api)\.xiuxiu\.meitu\.com\/v\d\/(h\d\/vip|vip|user)\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiTuXiuXiu.js
 
-# JJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJ
-# 南方週末年費會員 20220121
+// 南方週末年費會員 20220121
 ^https?:\/\/api\.infzm\.com\/mobile\/(user|contents\?|contents\/\d+\?|contents\/\d+\/isview\?|course_borrow|courses\/\d+\?|mall|course_items) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/NanFangZhouMo.js
 
-# KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK
-# 七貓小說終身會員
+// 七貓小說終身會員
 ^https?:\/\/(api-\w+|xiaoshuo)\.wtzw\.com\/api\/v\d\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/QiMaoXiaoShuo.js
 
-# LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL
-# 菜譜大全 烘焙小屋
+// 菜譜大全 烘焙小屋
 ^https?:\/\/apiios_dq\.xiangha\.com\/v\d\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/CaiPuDaQuan.js
 ^https?:\/\/appweb_dq\.xiangha\.com\/center\/pay\/home url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/CaiPuDaQuan.js
 
-# MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
-# 香哈菜譜 
+// 香哈菜譜 
 ^https?:\/\/apiios\.xiangha\.com\/main\d+\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/XiangHaCaiPu.js
 
-# NNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNN
-# TEXTEDITOR 
+// TEXTEDITOR 
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/TextEditor.js
 
-# OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
-# FIMO解鎖全部膠捲 
+// FIMO解鎖全部膠捲 
 ^https?:\/\/server\.yoyiapp\.com\/fimo-user\/apple\/certificate$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/FiMoCameraProCrack.js
 
-# PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP
-# Picsart美易解鎖訂閱， 更適用於 美區App Store
+// Picsart美易解鎖訂閱， 更適用於 美區App Store
 ^https?:\/\/api\.meiease\.cn\/shop\/subscription\/validate url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/Picsart.js
 
-# QQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQ
-# Audiomack 解鎖高級版 
+// Audiomack 解鎖高級版 
 ^https?:\/\/api\.revenuecat\.com\/v1\/subscribers\/(identify|\d+)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/AudioMackFProCrack.js
 
-# RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR
-# 克拉壁紙解鎖訂閱 重复了，先注释掉
-# ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ClarityWallpaperProCrack.js
+// 克拉壁紙解鎖訂閱 重复了，先注释掉
+// ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ClarityWallpaperProCrack.js
 
-# SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
-# 馬卡龍玩圖解鎖pro
+// 馬卡龍玩圖解鎖pro
 ^https?:\/\/app\.api\.versa-ai\.com\/pay\/order\/iap\/check url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MaKaLongWanTu.js
 
-# TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-# INSHOT解鎖 恢復訂閱即可
+// INSHOT解鎖 恢復訂閱即可
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/InShot.js
 
-# UUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUU
-# 酷我音樂解鎖豪華會員
-# 會員下載
+// 酷我音樂解鎖豪華會員
+// 會員下載
 ^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?newver.+$ url script-request-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kwyyxz.js
-# 會員 + 聽書
+// 會員 + 聽書
 ^http://(.+).kuwo.cn(/v2/api/user/info|/a.p|/vip/v2/user/vip) url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kwyy.js
 
-# VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV
-# 有書會員解鎖聽書 20211121
+// 有書會員解鎖聽書 20211121
 ^https?:\/\/(sc|gongdu)\.youshu\.cc\/(m|w|mp)\/(user\/count|media\/media_info|common\/elite_page_content|(page\/v2\/10010016|item\/subpage_pack_list).+)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/CellularBookProCrack.js
 
-
-# XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-# > WallCraft解锁永久专业版
+// > WallCraft解锁永久专业版
 ^https?:\/\/billing-ios\.wallpaperscraft\.com\/verify_receipt\/remove_ads$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/WallCraftFProCrack.js
 
-
-# 堆糖爱豆壁纸美图社区 # 已本地化并且替代
+// 堆糖爱豆壁纸美图社区 // 已本地化并且替代
 ^https?:\/\/www\.duitang\.com\/napi\/vienna\/graphic\/template url script-response-body https://raw.githubusercontent.com/hhx2018/HHXSELFUSE998/main/FootBook/apilesugar.js
 
 
