--- a/FootBook/toorightge.conf
+++ b/FootBook/toorightge.conf
@@ -3,34 +3,66 @@
 
 // ---------------------------------------------------------------------
 
-hostname = pro-status-service-prod.azurewebsites.net, appwk.baidu.com, www.duitang.com, .wallpaperscraft.com, buy.itunes.apple.com,*.gotokeep.com,api.account.meitu.com,vira.llsapp.com,api.meiyan.com,nomo.dafork.com,api.xiuxiu.meitu.com,h5.xiuxiu.meitu.com,api.infzm.com,apiios_dq.xiangha.com,appweb_dq.xiangha.com,101.200.225.157,apiios.xiangha.com,39.97.157.167,server.yoyiapp.com,api.meiease.cn,app.api.versa-ai.com,*.kuwo.cn,*.youshu.cc
+hostname =  123.56.125.184,api.bluepulse.cn, dict.youdao.com, photos.adobe.io, lcs-mobile-cops.adobe.io, user-kaji-api.b612kaji.com, pro-status-service-prod.azurewebsites.net, appwk.baidu.com, www.duitang.com, .wallpaperscraft.com,api.gotokeep.com,api.account.meitu.com,vira.llsapp.com,api.meiyan.com,nomo.dafork.com,api.xiuxiu.meitu.com,api.infzm.com,apiios_dq.xiangha.com,appweb_dq.xiangha.com,101.200.225.157,apiios.xiangha.com,39.97.157.167,server.yoyiapp.com,api.meiease.cn,app.api.versa-ai.com,*.kuwo.cn,*.youshu.cc
 
 
 // -------------------------------------------------------------------
 
+// 航旅追踪
+^https:\/\/api\.revenuecat\.com\/.+\/(receipts$|subscribers\/(\$RCAnonymousID%)?(\w)*$) url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/hlzz.js
 
+// 电视家解锁vip
+^http[s]?:\/\/123.56.125.184 url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/dsj.js
+
+// 绘影字幕 解锁vip
+^https:\/\/api\.bluepulse\.cn\/bluepulse-caption-server-front\/api\/v1\/\/user\/app-vip-info url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/hyzm.js
+
+// 流利说 阅读 解锁vip
+^https?:\/\/vira\.llsapp\.com\/api\/v\d\/\w+\/\w+$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/llsyd.js
+
+// CAD快速看图解锁订阅
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/CDAkskt.js
+
+// Focus 解锁订阅
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Focos.js
+
+// 网易有道词典
+^https:\/\/dict\.youdao\.com\/vip\/user\/status url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/wyydcd.js
+
+// 熊掌记 Markdown 解锁订阅
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/xzj.js
+
+// Photoshop Express +解锁高级用户
+^https:\/\/lcs-mobile-cops\.adobe\.io\/mobile_profile url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Photoshop.js
+
+// Lr Adobe Lightroom+解锁订阅
+^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/lightroom.js
+
+
+// Picsew 长截图 解锁订阅
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Picsew.js
+
+// B612咔叽 解锁vip
+^https:\/\/user-kaji-api\.b612kaji\.com\/v1\/purchase\/subscription\/subscriber\/status url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/bj.js
+
+// 美图秀秀 
+^https:\/\/api\.xiuxiu\.meitu\.com\/v1 url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/mtxx.js
 
 // 百度文库解锁会员阅读权限
-^https:\/\/appwk\.baidu\.com\/naapi\/user\/getinfo url script-response-body https://raw.githubusercontent.com/hhx2018/HHXSELFUSE998/main/FootBook/baiduwenku.js
+^https:\/\/appwk\.baidu\.com\/naapi\/user\/getinfo url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/bdwk.js
 
 // 傲軟摳圖 解鎖
 ^https?:\/\/gw\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/BackgroundEraserProCrack.js
 
-// 解鎖KEEP會員視頻 V 7.17.0有效
-^https://(.+).gotokeep.com(/athena/v5/people/my|/nuocha/plans) url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/keep
+// 解鎖KEEP會員視頻 V 7.36
+^https:\/\/api\.gotokeep\.com url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/keep.js
 
 // 美顏相機解鎖紫鑽石會員 20220115 V10.3.0 如果圖片加載不出來，關掉廣告規則
 ^https?:\/\/api\.account\.meitu\.com\/(common\/check_device_login_pwd|users\/show_current\.json) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiYanXiangJi.js
 ^https?:\/\/api\.meiyan\.com\/vip\/(user_center\.json|user_info\.json) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiYanXiangJi.js
 
-// 流利說閱讀 id1435478035 解鎖會員 20220116
-^https?:\/\/vira\.llsapp\.com\/api\/v\d\/\w+\/\w+$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/LiuLiShuo-YueDu.js
-
 // NOMOCAM & NOMORAW 解鎖訂閱 1.5.131
 ^https?:\/\/nomo\.dafork\.com\/api\/v3\/register\/phone_signin$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NoMoCamProCrack.js
-
-// 美圖秀秀高級會員 20220117 無需登錄
-^https?:\/\/(h5|api)\.xiuxiu\.meitu\.com\/v\d\/(h\d\/vip|vip|user)\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiTuXiuXiu.js
 
 // 南方週末年費會員 20220121
 ^https?:\/\/api\.infzm\.com\/mobile\/(user|contents\?|contents\/\d+\?|contents\/\d+\/isview\?|course_borrow|courses\/\d+\?|mall|course_items) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/NanFangZhouMo.js
@@ -61,7 +93,7 @@ hostname = pro-status-service-prod.azurewebsites.net, appwk.baidu.com, www.duita
 // ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ClarityWallpaperProCrack.js
 
 // 馬卡龍玩圖解鎖pro
-^https?:\/\/app\.api\.versa-ai\.com\/pay\/order\/iap\/check url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MaKaLongWanTu.js
+https://app.api.versa-ai.com/pay/order/iap/check url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/mklwt.js
 
 // INSHOT解鎖 恢復訂閱即可
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/InShot.js
