--- a/Source/Gallery/_b3tf2KH36etam_o2.yaml
+++ b/Source/Gallery/_b3tf2KH36etam_o2.yaml
@@ -54,50 +54,13 @@ rules:
  - DOMAIN-SUFFIX,cpta.com.cn,仅限中国大陆
 
 
+ - DOMAIN-SUFFIX,bilibili.com,📺 哔哩哔哩
 
 
- - DOMAIN-SUFFIX.video.qq.com,🌏 国内媒体
- - DOMAIN-SUFFIX.v.qq.com,🌏 国内媒体
+ - DOMAIN-SUFFIX,video.qq.com,🌏 国内媒体
+ - DOMAIN-SUFFIX,v.qq.com,🌏 国内媒体
  - DOMAIN-SUFFIX,iqiyi.com,🌏 国内媒体
- - DOMAIN,apiintl.biliapi.net,🌏 国内媒体
- - DOMAIN,upos-hz-mirrorakam.akamaized.net,🌏 国内媒体
- - DOMAIN-SUFFIX,acg.tv,🌏 国内媒体
- - DOMAIN-SUFFIX,acgvideo.com,🌏 国内媒体
- - DOMAIN-SUFFIX,b23.tv,🌏 国内媒体
- - DOMAIN-SUFFIX,bigfun.cn,🌏 国内媒体
- - DOMAIN-SUFFIX,bigfunapp.cn,🌏 国内媒体
- - DOMAIN-SUFFIX,biliapi.com,🌏 国内媒体
- - DOMAIN-SUFFIX,biliapi.net,🌏 国内媒体
- - DOMAIN-SUFFIX,bilibili.com,🌏 国内媒体
- - DOMAIN-SUFFIX,bilibili.tv,🌏 国内媒体
- - DOMAIN-SUFFIX,biligame.com,🌏 国内媒体
- - DOMAIN-SUFFIX,biligame.net,🌏 国内媒体
- - DOMAIN-SUFFIX,bilivideo.cn,🌏 国内媒体
- - DOMAIN-SUFFIX,bilivideo.com,🌏 国内媒体
- - DOMAIN-SUFFIX,hdslb.com,🌏 国内媒体
- - DOMAIN-SUFFIX,im9.com,🌏 国内媒体
-#  - DOMAIN-SUFFIX,smtcdns.net,🌏 国内媒体
- - DOMAIN,intel-cache.m.iqiyi.com,🌏 国内媒体
- - DOMAIN,intel-cache.video.iqiyi.com,🌏 国内媒体
- - DOMAIN,intl-rcd.iqiyi.com,🌏 国内媒体
- - DOMAIN,intl-subscription.iqiyi.com,🌏 国内媒体
- - DOMAIN-SUFFIX,inter.iqiyi.com,🌏 国内媒体
- - DOMAIN-SUFFIX,inter.ptqy.gitv.tv,🌏 国内媒体
- - DOMAIN-SUFFIX,intl.iqiyi.com,🌏 国内媒体
- - DOMAIN-SUFFIX,iq.com,🌏 国内媒体
- - IP-CIDR,23.40.241.251/32,🌏 国内媒体,no-resolve
- - IP-CIDR,23.40.242.10/32,🌏 国内媒体,no-resolve
- - IP-CIDR,103.44.56.0/22,🌏 国内媒体,no-resolve
- - IP-CIDR,118.26.32.0/23,🌏 国内媒体,no-resolve
- - IP-CIDR,118.26.120.0/24,🌏 国内媒体,no-resolve
- - IP-CIDR,223.119.62.225/28,🌏 国内媒体,no-resolve
- - DOMAIN-SUFFIX,api.mob.app.letv.com,🌏 国内媒体
-#  - DOMAIN-SUFFIX,v.smtcdns.com,🌏 国内媒体
- - DOMAIN-SUFFIX,vv.video.qq.com,🌏 国内媒体
  - DOMAIN-SUFFIX,youku.com,🌏 国内媒体
- - IP-CIDR,106.11.0.0/16,🌏 国内媒体,no-resolve
-
-
  - DOMAIN-SUFFIX,4399.com,🌏 国内媒体
  - DOMAIN-SUFFIX,4399pk.com,🌏 国内媒体
  - DOMAIN-SUFFIX,5054399.com,🌏 国内媒体
@@ -111,11 +74,6 @@ rules:
  - DOMAIN-SUFFIX,mi.com,🌏 国内媒体
  - DOMAIN-SUFFIX,miui.com,🌏 国内媒体
  - DOMAIN-SUFFIX,xiaomi.com,🌏 国内媒体
- - DOMAIN-SUFFIX,xiaomi.net,🌏 国内媒体
- - DOMAIN-SUFFIX,xiaomicp.com,🌏 国内媒体
-
-
-
 
 
 
@@ -1831,45 +1789,6 @@ rules:
  - IP-CIDR,223.252.199.66/32,🎶 网易音乐,no-resolve
  - IP-CIDR,223.252.199.67/32,🎶 网易音乐,no-resolve
 
- - DOMAIN,p-bstarstatic.akamaized.net,📺 哔哩哔哩
- - DOMAIN,p.bstarstatic.com,📺 哔哩哔哩
- - DOMAIN,upos-bstar-mirrorakam.akamaized.net,📺 哔哩哔哩
- - DOMAIN,upos-bstar1-mirrorakam.akamaized.net,📺 哔哩哔哩
- - DOMAIN,upos-hz-mirrorakam.akamaized.net,📺 哔哩哔哩
- - DOMAIN-SUFFIX,acgvideo.com,📺 哔哩哔哩
- - DOMAIN-SUFFIX,bilibili.com,📺 哔哩哔哩
- - DOMAIN-SUFFIX,bilibili.tv,📺 哔哩哔哩
- - IP-CIDR,45.43.32.234/32,📺 哔哩哔哩,no-resolve
- - IP-CIDR,103.151.150.0/23,📺 哔哩哔哩,no-resolve
- - IP-CIDR,119.29.29.29/32,📺 哔哩哔哩,no-resolve
- - IP-CIDR,128.1.62.200/32,📺 哔哩哔哩,no-resolve
- - IP-CIDR,128.1.62.201/32,📺 哔哩哔哩,no-resolve
- - IP-CIDR,150.116.92.250/32,📺 哔哩哔哩,no-resolve
- - IP-CIDR,164.52.33.178/32,📺 哔哩哔哩,no-resolve
- - IP-CIDR,164.52.33.182/32,📺 哔哩哔哩,no-resolve
- - IP-CIDR,164.52.76.18/32,📺 哔哩哔哩,no-resolve
- - IP-CIDR,203.107.1.33/32,📺 哔哩哔哩,no-resolve
- - IP-CIDR,203.107.1.34/32,📺 哔哩哔哩,no-resolve
- - IP-CIDR,203.107.1.65/32,📺 哔哩哔哩,no-resolve
- - IP-CIDR,203.107.1.66/32,📺 哔哩哔哩,no-resolve
- - DOMAIN,apiintl.biliapi.net,📺 哔哩哔哩
- - DOMAIN,upos-hz-mirrorakam.akamaized.net,📺 哔哩哔哩
- - DOMAIN-SUFFIX,acg.tv,📺 哔哩哔哩
- - DOMAIN-SUFFIX,acgvideo.com,📺 哔哩哔哩
- - DOMAIN-SUFFIX,b23.tv,📺 哔哩哔哩
- - DOMAIN-SUFFIX,bigfun.cn,📺 哔哩哔哩
- - DOMAIN-SUFFIX,bigfunapp.cn,📺 哔哩哔哩
- - DOMAIN-SUFFIX,biliapi.com,📺 哔哩哔哩
- - DOMAIN-SUFFIX,biliapi.net,📺 哔哩哔哩
- - DOMAIN-SUFFIX,bilibili.com,📺 哔哩哔哩
- - DOMAIN-SUFFIX,bilibili.tv,📺 哔哩哔哩
- - DOMAIN-SUFFIX,biligame.com,📺 哔哩哔哩
- - DOMAIN-SUFFIX,biligame.net,📺 哔哩哔哩
- - DOMAIN-SUFFIX,bilivideo.cn,📺 哔哩哔哩
- - DOMAIN-SUFFIX,bilivideo.com,📺 哔哩哔哩
- - DOMAIN-SUFFIX,hdslb.com,📺 哔哩哔哩
- - DOMAIN-SUFFIX,im9.com,📺 哔哩哔哩
- - DOMAIN-SUFFIX,smtcdns.net,📺 哔哩哔哩
 
 
  - MATCH,🐟 漏网之鱼
