--- a/FootBook/toorightge.conf
+++ b/FootBook/toorightge.conf
@@ -98,11 +98,7 @@ https://app.api.versa-ai.com/pay/order/iap/check url script-response-body https:
 // INSHOT解鎖 恢復訂閱即可
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/InShot.js
 
-// 酷我音樂解鎖豪華會員
-// 會員下載
-^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?newver.+$ url script-request-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kwyyxz.js
-// 會員 + 聽書
-^http://(.+).kuwo.cn(/v2/api/user/info|/a.p|/vip/v2/user/vip) url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kwyy.js
+// 酷我音樂解鎖豪華會員 20241126已移除
 
 // 有書會員解鎖聽書 20211121
 ^https?:\/\/(sc|gongdu)\.youshu\.cc\/(m|w|mp)\/(user\/count|media\/media_info|common\/elite_page_content|(page\/v2\/10010016|item\/subpage_pack_list).+)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/CellularBookProCrack.js
