--- a/FootBook/UnlockApp+.conf
+++ b/FootBook/UnlockApp+.conf
@@ -11,11 +11,7 @@ hostname = *.caiyunapp.*, *cyapi*, api4.bybutter.com, commerce-i18n-api.faceu.mo
 
 #!name=彩云天气SVIP
 #!desc=彩云天气会员解锁
-#!homepage=https://github.com/deezertidal
-
-^http[s]?:\/\/biz\.(caiyunapp|cyapi)\.(com|cn)\/v2\/user.*$ url script-response-body https://raw.githubusercontent.com/WeiRen0/Scripts/main/cytq.js
-^https:\/\/ad\.caiyunapp\.com\/ url reject
-
+#!homepage=https://github.com/deezertidal 20241126已移除
 # -------------2022-5-12汇总更新----------------------
 
 # ～ 黄油相机最新版锁相片编辑权限（2022-09-05）emm
